--- a/Welcomeback/jsprojects/Magicnotes/index1.html
+++ b/Welcomeback/jsprojects/Magicnotes/index1.html
@@ -51,6 +51,7 @@
         <hr>
         <div id="notes" class="row container-fluid"> </div>
     </div>
+    //Used bootstrap for frontend.
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
